day display pop up window added. functions to open/close window working

--- a/public/src/app/app.component.scss
+++ b/public/src/app/app.component.scss
@@ -20,7 +20,8 @@ body {
 main {
     height: 100%;
     width: 100%;
-    background: radial-gradient(white, #797979);
+    // background: radial-gradient(white, #797979);
+    background: linear-gradient(#00c3ff, white);
     // padding-top: 5vh;
 }
 
