--- a/public/src/app/calendar/calendar.component.scss
+++ b/public/src/app/calendar/calendar.component.scss
@@ -15,7 +15,6 @@ li {
     padding: 0;
     margin: 0;
     list-style: none;
-    border-bottom: 2px solid black;
 }
 
 .calendar-month {
@@ -31,6 +30,11 @@ li {
         justify-content: center;
         background-color: #fff;
         padding: 10px;
+        border-left: 4px solid black;
+        border-right: 4px solid black;
+        border-bottom: 4px solid black;
+        border-radius: 0px 0px 25% 25%;
+        margin-bottom: 15px;
 
         h1 {
             width: 236px;
@@ -46,6 +50,9 @@ li {
             display: inline-block;
         }
     }
+    &.hide {
+        opacity: 0.15;
+    }
 }
 
 .day-of-week,
@@ -57,9 +64,10 @@ li {
 .day-of-week {
     color: var(--grey-800);
     font-size: 18px;
-    background-color: #fff;
+    // background-color: #fff;
     padding-bottom: 5px;
     padding-top: 10px;
+    border-bottom: 2px solid black;
 }
 
 .days-grid {
@@ -77,11 +85,12 @@ li {
     color: var(--grey-800);
     padding: 5px;
     border: 2px solid black;
+    background: rgb(150, 143, 255);
 
     border-radius: 20px;
 
     &--not-current {
-        background: rgba($color: #5e5e5e, $alpha: 0.7);
+        background: rgba($color: #5e5e5e, $alpha: 0.5);
         color: white;
     }
     &-today {
@@ -89,4 +98,68 @@ li {
         color: #fff;
         background-color: black;
     }
+
+    &:hover {
+        transform: scale(1.1);
+        cursor: pointer;
+        transition: 0.2s ease-in-out;
+    }
+
+    &.hide {
+        visibility: hidden;
+    }
+}
+// -----------------------------------------------------------------
+
+.expandDay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    // float: left;
+    width: 100%;
+    height: 100vh;
+    // opacity: 0.9;
+    visibility: hidden;
+    // background: #e2e2e2;
+
+    &.show {
+        visibility: visible;
+    }
+
+    .dayContent {
+        margin: auto;
+        margin-top: 10vh;
+        width: 60%;
+        height: 500px;
+        overflow: hidden;
+        background: #cfd7e3;
+        opacity: 1.0;
+        border: 3px solid black;
+        border-radius: 50px;
+        
+        text-align: center;
+    }
+}
+
+.closeBtn {
+    display: inline-block;
+    position: relative;
+    right: -28%;
+    cursor: pointer;
+
+    .btn-line {
+        width: 28px;
+        height: 3px;
+        margin: 0 0 5px 0;
+        background: black;
+        border-radius: 5px;
+
+        &:nth-child(1) {
+            transform: rotate(45deg) translate(4px, 1px);
+        }
+        &:nth-child(2) {
+            transform: rotate(-45deg) translate(5px, -2px);
+        }
+    }
+
 }
