APIs for births/deaths working. function for toggle asc/dsc. Daycontent/info component complete.

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -9,8 +9,7 @@
 <body>
   <header></header>
   <main>
-    <app-calendar [allGoals]="alllGoals"></app-calendar>
-    <!-- <app-new-goal></app-new-goal> -->
+    <app-calendar></app-calendar>
   </main>
   <footer></footer>
 </body>
