--- a/public/src/app/calendar/calendar.component.scss
+++ b/public/src/app/calendar/calendar.component.scss
@@ -80,7 +80,6 @@ li {
 
 .calendar-day {
     position: relative;
-    min-height: 100px;
     font-size: 16px;
     color: var(--grey-800);
     padding: 5px;
@@ -118,14 +117,11 @@ li {
     // float: left;
     width: 100%;
     height: 100vh;
-    // opacity: 0.9;
     visibility: hidden;
-    // background: #e2e2e2;
 
     &.show {
         visibility: visible;
     }
-
     .dayContent {
         margin: auto;
         margin-top: 10vh;
@@ -136,7 +132,6 @@ li {
         opacity: 1.0;
         border: 3px solid black;
         border-radius: 50px;
-        
         text-align: center;
 
         .dayInfo {
@@ -175,7 +170,6 @@ li {
 .closeBtn {
     display: inline-block;
     position: relative;
-    right: -28%;
     cursor: pointer;
 
     .btn-line {
@@ -192,5 +186,85 @@ li {
             transform: rotate(-45deg) translate(5px, -2px);
         }
     }
+    .calendar-day {
+        min-height: 50px;
+    }
 
+}
+
+
+    @media screen and (max-width: 500px) {
+        .closeBtn {
+            right: -6%;
+        }
+        .calendar-month {
+            width: 94%;
+            &-header {
+                height: 75px;
+                h1 {
+                    width: 214px;
+                }
+        
+                &-selected-month {
+                    font-size: 20px;
+                    font-weight: 600;
+                }
+            }
+        }
+        .calendar-day {
+            min-height: 68px;
+        }
+    }
+
+@media screen and (min-width: 501px) {
+    .expandDay .dayContent {
+        width: 85%;
+        height: 80vh;
+    }
+    .closeBtn {
+        right: -15%;
+    }
+    .calendar-month {
+        width: 90%;
+        &-header {
+            height: 100px;
+            h1 {
+                width: 236px;
+            }
+    
+            &-selected-month {
+                font-size: 24px;
+                font-weight: 600;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 767px) {
+    .expandDay .dayContent {
+        width: 75%;
+        height: 75vh;
+    }
+    .closeBtn {
+        right: -25%;
+    }
+    .calendar-day {
+        min-height: 100px;
+    }
+    .calendar-month {
+        width: 80%;
+    }
+    .calendar-day {
+        min-height: 100px;
+    }
+}
+@media screen and (min-width: 1171px) {
+    .expandDay .dayContent {
+        width: 75%;
+        height: 75vh;
+    }
+
+    .closeBtn {
+        right: -28%;
+    }
 }
