--- a/public/src/styles.scss
+++ b/public/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    // @include background;
+    // background: $primary-color;
+    // color: set-text-color($primary-color);
+    height: 100vh;
+    // width: 100%;
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.5;
+}
+
+main {
+    height: 100%;
+    width: 100%;
+    // background: radial-gradient(white, #797979);
+    background: linear-gradient(#00c3ff, white);
+    // padding-top: 5vh;
+}
+
+
+
+#test {
+    color: blue;
+}
