quick update -- background image centered

--- a/public/src/styles.scss
+++ b/public/src/styles.scss
@@ -5,29 +5,16 @@
     margin: 0;
     padding: 0;
 }
-
 body {
-    // @include background;
-    // background: $primary-color;
-    // color: set-text-color($primary-color);
     height: 100vh;
-    // width: 100%;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
 }
-
 main {
     height: 100%;
     width: 100%;
     background-image: url("./assets/background.jpeg");
     background-size: cover;
-    
-    // padding-top: 5vh;
-}
-
-
-
-#test {
-    color: blue;
+    background-position: center;
 }
