last update -- pop up window close button top setting

--- a/public/src/app/app.component.scss
+++ b/public/src/app/app.component.scss
@@ -236,7 +236,7 @@ li {
     }
     .closeBtn {
         right: 4%;
-        top: 120px;
+        top: 14%;
     }
 }
 @media screen and (min-width: 501px) {
@@ -271,7 +271,7 @@ li {
     }
     .closeBtn {
         right: 11%;
-        top: 110px;
+        top: 13%;
     }
 }
 @media screen and (min-width: 767px) {
@@ -297,7 +297,6 @@ li {
     }
     .closeBtn {
         right: 8%;
-        top: 110px;
     }
 }
 @media screen and (min-width: 1171px) {
